--- a/atr/templates/delete-committee-keys.html
+++ b/atr/templates/delete-committee-keys.html
@@ -10,27 +10,7 @@
   <div class="container mx-auto p-4">
     <h1 class="mb-4">Delete all keys for a committee</h1>
 
-    <form method="post"
-          action="{{ as_url(admin.delete_committee_keys_post) }}"
-          class="atr-canary py-4 px-5 border rounded">
-      {{ form.csrf_token }}
-
-      <div class="mb-3">
-        {{ forms.label(form.committee_name) }}
-        {{ forms.widget(form.committee_name, classes="form-select", id=form.committee_name.id) }}
-        {{ forms.errors(form.committee_name) }}
-        {{ forms.description(form.committee_name) }}
-      </div>
-
-      <div class="mb-3">
-        {{ forms.label(form.confirm_delete) }}
-        {{ forms.widget(form.confirm_delete, classes="form-control", id=form.confirm_delete.id) }}
-        {{ forms.errors(form.confirm_delete) }}
-        {{ forms.description(form.confirm_delete) }}
-      </div>
-
-      <div class="mt-4">{{ form.submit(class_="btn btn-danger") }}</div>
-    </form>
+    {{ form }}
 
   </div>
 {% endblock content %}
