--- a/atr/templates/projects.html
+++ b/atr/templates/projects.html
@@ -73,23 +73,7 @@
 
             {# TODO: Could add "or is_viewing_as_admin_fn(current_user.uid)" #}
             {# But then the page is noisy for admins #}
-          {% if project.created_by == current_user.uid %}
-            <div class="mt-3">
-              <form method="post"
-                    action="{{ as_url(post.projects.delete) }}"
-                    class="d-inline-block m-0"
-                    onsubmit="return confirm('Are you sure you want to delete the project \'{{ project.display_name }}\'? This cannot be undone.');">
-                {{ empty_form.hidden_tag() }}
-
-                <input type="hidden" name="project_name" value="{{ project.name }}" />
-                <button type="submit"
-                        class="btn btn-sm btn-outline-danger"
-                        title="Delete {{ project.display_name }}">
-                  <i class="bi bi-trash"></i> Delete project
-                </button>
-              </form>
-            </div>
-          {% endif %}
+          {% if project.created_by == current_user.uid %}<div class="mt-3">{{ delete_forms[project.name] }}</div>{% endif %}
 
         </div>
       </div>
