--- a/atr/templates/layouts/base.html
+++ b/atr/templates/layouts/base.html
@@ -17,30 +17,14 @@
             href="{{ static_url('css/bootstrap-icons.min.css') }}" />
       <link rel="stylesheet" href="{{ static_url('css/bootstrap.custom.css') }}" />
       <style>
-        body {
-          padding-top: 72px;
-        }
+        @media (min-width: 990px) {
+          body {
+            padding-top: 72px;
+          }
 
-        .fixed-top {
-          position: fixed;
-        }
-
-        .asf-logo {
-          height: 42px;
-          margin-left: 6px;
-        }
-
-        .trusted-releases {
-          position: relative;
-          top: -10px;
-          margin-left: 10px;
-          font-weight: 650 !important;
-        }
-
-        .navbar-adp-offset {
-          position: relative;
-          top: 3px;
-          margin-left: 16px;
+          .fixed-top {
+            position: fixed;
+          }
         }
       </style>
     {% endblock stylesheets %}
