Make project cards actual links

--- a/atr/templates/projects.html
+++ b/atr/templates/projects.html
@@ -36,13 +36,13 @@
       {% endif %}
     {% endif %}
     <div class="col">
-      <div class="card h-100 shadow-sm atr-cursor-pointer page-project-card {{ '' if project.status.value.lower() == 'active' else 'bg-body-secondary' }}"
+      <div class="card h-100 shadow-sm position-relative page-project-card {{ '' if project.status.value.lower() == 'active' else 'bg-body-secondary' }}"
            data-project-url="{{ as_url(get.projects.view, name=project.name) }}"
            data-is-participant="{{ 'true' if is_part else 'false' }}">
         <div class="card-body">
           <div class="row g-1">
             <div class="col-sm">
-              <h3 class="card-title fs-4 mb-3">{{ project.display_name }}</h3>
+              <h3 class="card-title fs-4 mb-3"><a href="{{ as_url(get.projects.view, name=project.name) }}" class="text-decoration-none text-body stretched-link">{{ project.display_name }}</a></h3>
             </div>
             {% if project.status.value.lower() != 'active' %}
               <div class="col-sm-2">
@@ -73,7 +73,7 @@
 
             {# TODO: Could add "or is_viewing_as_admin_fn(current_user.uid)" #}
             {# But then the page is noisy for admins #}
-          {% if project.created_by == current_user.uid %}<div class="mt-3">{{ delete_forms[project.name] }}</div>{% endif %}
+          {% if project.created_by == current_user.uid %}<div class="mt-3 position-relative z-1">{{ delete_forms[project.name] }}</div>{% endif %}
 
         </div>
       </div>
